# clockly

./: .gitignore  PKGBUILD  README.md  index.html  package-lock.json  package.json  script.js  style.css
clockly/: FETCH_HEAD  config  packed-refs
clockly/objects/pack/: pack-78e0a77061c671af2d5dd0806f3f063782469464.idx  pack-78e0a77061c671af2d5dd0806f3f063782469464.pack  pack-78e0a77061c671af2d5dd0806f3f063782469464.rev
clockly/refs/heads/: main
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
website/: index.html
