[package]
name = "clockly"
version = "1.0.0"
description = "Clockly – A lightweight time management suite"
authors = ["bluewizardz"]
edition = "2021"
rust-version = "1.77.2"

# Keep binary size small
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[lib]
name = "clockly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "clockly"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
